data/all_generated_tests/raw_wast_tests/br_StackCorruption_271.wast
;; 2. **Test for Incorrect Operand Restoration:**    - Create a `loop` with unique operands and use `br` to jump to the beginning of the `loop`. Test if the operand stack maintains the correct values before entering the loop, ensuring no operand corruption occurs during the jump.

(assert_invalid
  (module
    (func $incorrect-operand-restoration
      (block $outmost (result i32)
        (loop $loop (result i32)
          (i32.const 42)
          (br $loop)
        )
      )
    )
  )
  "type mismatch"
)